[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://placeHolderWhite.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.1, 7.8 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 240, 464 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PlayerColl" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2( 0.1, -0.2 )
shape = SubResource( 2 )

[node name="floorRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 4 )
